# gh-actions-agentic-crawler-tutorial

./: .gitignore  AGENTS.md  README.md  agent-plan.md  pyproject.toml
.github/workflows/: README.md  agent-execute.yml  agent-plan.yml  ci.yml
crawler_tool/: __init__.py  cli.py  crawler.py
docs/: 01-github-actions-for-beginners.md  02-agentic-development-flow.md  03-file-by-file-tour.md  04-troubleshooting.md  SOURCES.md
examples/: config.json  site_map.json
phases/: README.md
phases/01-foundations/: README.md
phases/02-web-ci/: README.md
phases/02-web-ci/examples/: web-ci-example.yml
phases/03-team-workflow/: README.md
phases/03-team-workflow/examples/: pull-request-checks-example.yml
phases/04-deployments/: README.md
phases/04-deployments/examples/: preview-deploy-example.yml  production-deploy-example.yml
phases/05-professional-patterns/: README.md
phases/05-professional-patterns/examples/: reusable-node-ci-example.yml  use-reusable-ci-example.yml
scripts/: agent_execute_simulator.py  create_agent_plan.py  validate_agent_plan.py
tests/: test_crawler.py
